This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance, for the stable release version
============================================================================
2/7/24: Fixed screwed up hybrid montages when property StageMontageMaxError is
set (In 4.1).

2/4/24: Fixed some problems when completion character is typed in script editor
with Python (In 4.1).

2/4/24: Allowed variables in prompts for userSetDirectory and EnterNameOpenFile
(In 4.1).

2/4/24: Fixed window placement of script editor #60 (In 4.1).

1/31/24: Fixed adjustment when assigning current stage positions to a
Navigator item and improved the "disparity in stage position" reports from
Realign to Item by using just the shifts in the images (In 4.1).

1/31/24: SEM_4-1-3
1/31/24: Fixed output of ReporCameraLength command in STEM mode (In 4.1).

1/28/24: Fixed GoToImagingState command to accept a full name if it is unique
even if it matches the start of another name (In 4.1).

1/25/24: Relaxed defocus criteria for acceptable CTF fit in coma-free
alignment and add suggestion to try lower beam til temporarily (In 4.1).

1/25/24: Adjusted default readout interval for Falcon 4i to give correct
number of frames for 6-sec exposures (In 4.1).

1/25/24: Fixed bad value for autofocus beam tilt being set if Check Autofocus
is stopped (In 4.1).

1/25/24: Allowed Realign to Item to work with groups collapsed (In 4.1).

1/20/24: Added checks for bad tilt series and montage parameter indexes after
loading in a Navigator file and before starting acquisition (In 4.1).

1/11/24: SEM_4-1-2
1/11/24: Added ability to set hex grid vectors with SetRegularHoleVectors
(In 4.1).

1/11/24: Fixed bad handle leak the crashed DM with GMS 3.6 (In 4.1).

1/5/24: Changed ReportCurrentPixelSize command to give size at mag of Low Dose
area when in Low Dose (In 4.1).
