@@ -447,7 +447,9 @@
       <li><em>Middle button click</em> will add a point to the group to which the current point 
         belongs.</li>
       <li><em>Right button click</em> will move the currently selected point to a new position.</li>
-      <li><em>Backspace</em> will delete the currently selected point.</li>
+      <li><em>Backspace</em> will delete the currently selected point, or currently 
+        selected polygon if it has a group ID (i.e., was created from autocontouring 
+        grid squares).</li>
       <li><b>Add Points</b>, <b>Add Polygon</b>, and <b>Move Item</b> can still be used 
         in Edit mode, and the left button will no longer select a point during those 
         operations.</li>
