@@ -3,6 +3,10 @@ This is a record of changes to SerialEM since it was first publicly released.
 * marks changes or enhancements noticeable to the user, or items of particular
 significance, for the stable release version
 ============================================================================
+2/11/24: SEM_4-1-4
+2/11/24: Made backspace in Edit mode delete the current polygon if it was
+created with autocontouring (In 4.1).
+
 2/7/24: Fixed screwed up hybrid montages when property StageMontageMaxError is
 set (In 4.1).
 
